# retrace

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: package-lock.json  package.json  tsconfig.json
demo/src/: RetraceDemo.tsx  Root.tsx
docs/screenshots/: README.md
retrace/: __init__.py  cli.py  config.py  db.py  models.py  status.py
retrace/activity/: __init__.py  service.py
retrace/api/: __init__.py  app.py  deps.py  routes_activity.py  routes_capture.py  routes_config.py  routes_export.py  routes_permissions.py  routes_plugins.py  routes_search.py  routes_stats.py  serializers.py
retrace/capture/: __init__.py  caption.py  caption_native.py  daemon.py  pipeline.py  privacy.py  retention.py
retrace/mcp/: __init__.py  server.py
retrace/native/: __init__.py  doctor.py  helpers.py  permissions.py
retrace/native/swift/: retrace-calendar.swift  retrace-caption.swift  retrace-capture.swift  retrace-context.swift  retrace-embed.swift  retrace-menubar.swift  retrace-ocr.swift  retrace-present.swift  retrace-sensitivity.swift  retrace-watch.swift
retrace/plugins/: __init__.py  _ingest.py  base.py  registry.py
retrace/plugins/builtin/: __init__.py  apple_music.py  calendar.py  claude_code.py  clipboard.py  downloads.py  git_activity.py  mail.py  notifications.py  recent_files.py  spotify.py  system_stats.py
retrace/search/: __init__.py  service.py
retrace/stats/: __init__.py  service.py
retrace/web/: app.js  index.html  styles.css
scripts/: com.retrace.daemon.plist  seed_demo.py
tests/: conftest.py  test_activity.py  test_api.py  test_builtin_plugins.py  test_caption.py  test_config.py  test_daemon.py  test_db.py  test_helpers.py  test_mcp.py  test_pipeline.py  test_plugins.py  test_pollers.py  test_privacy.py  test_retention.py  test_search.py  test_stats.py  test_status.py
